err
main.cpp:23:18: error: no viable conversion from 'ft::pair<char, int>' to 'const ft::map<char, int, std::__1::less<char>, std::__1::allocator<ft::pair<const char, int> > >::value_type' (aka 'const pair<char, int>')
  mymap.insert ( ft::pair<char,int>('a',100) );
                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/utility:316:29: note: candidate constructor (the implicit copy constructor) not viable: no known conversion from 'ft::pair<char, int>' to 'const std::__1::pair<char, int> &' for 1st argument
struct _LIBCPP_TEMPLATE_VIS pair
                            ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/utility:343:5: note: candidate template ignored: could not match 'std::__1::pair' against 'ft::pair'
    pair(const pair<_U1, _U2>& __p) : first(__p.first), second(__p.second) {}
    ^
./map.hpp:75:45: note: passing argument to parameter 'val' here
            void insert (const value_type & val)
                                            ^
main.cpp:24:18: error: no viable conversion from 'ft::pair<char, int>' to 'const ft::map<char, int, std::__1::less<char>, std::__1::allocator<ft::pair<const char, int> > >::value_type' (aka 'const pair<char, int>')
  mymap.insert ( ft::pair<char,int>('z',200) );
                 ^~~~~~~~~~~~~~~~~~~~~~~~~~~
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/utility:316:29: note: candidate constructor (the implicit copy constructor) not viable: no known conversion from 'ft::pair<char, int>' to 'const std::__1::pair<char, int> &' for 1st argument
struct _LIBCPP_TEMPLATE_VIS pair
                            ^
/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/../include/c++/v1/utility:343:5: note: candidate template ignored: could not match 'std::__1::pair' against 'ft::pair'
    pair(const pair<_U1, _U2>& __p) : first(__p.first), second(__p.second) {}
    ^
./map.hpp:75:45: note: passing argument to parameter 'val' here
            void insert (const value_type & val)
                                            ^
./map.hpp:77:28: error: binding value of type 'const pair<...>' to reference to type 'pair<...>' drops 'const' qualifier
                m_tree.add(val);
                           ^~~
main.cpp:23:9: note: in instantiation of member function 'ft::map<char, int, std::__1::less<char>, std::__1::allocator<ft::pair<const char, int> > >::insert' requested here
  mymap.insert ( ft::pair<char,int>('a',100) );
        ^
./red_black_tree.hpp:111:30: note: passing argument to parameter 'd' here
        void add(value_type &d)
                             ^
3 errors generated.
make: *** [main.o] Error 1
